@@ -1,4 +1,7 @@
 class ClassFolder
   class NestedClass
   end
+  
+  class SiblingClass
+  end
 end
